[package]
name = "komitoto"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "^0.4.44", features = ["serde"] }
chrono-tz = "^0.10.0"
clap = { version = "4.6.1", features = ["derive"] }
sunrise = "3.0.0"
geoutils = "^0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
